template django rest

--- a/basic/python/flask/Makefile
+++ b/basic/python/flask/Makefile
@@ -1,7 +1,6 @@
 up:
 	docker-compose up
 app:
-	docker exec -it eemovel-py bash
-
+	docker exec -it tmpl-flask-py bash
 debug:
 	DEBUGGER=True python tests/test_entrypoint.py
