--- a/basic/python/fastapi/docker-compose.yaml
+++ b/basic/python/fastapi/docker-compose.yaml
@@ -1,12 +1,14 @@
-version: "3.9"
+version: '3.9'
 services:
   python:
     build:
       context: .
       target: local
-    container_name: tmpl-flask-py
+    container_name: tmpl-fastapi-py
     tty: true
     volumes:
       - .:/usr/src/app
     ports:
-      - "3000:3000" #porta usada para debug
+      - "3001:3000"
+      - "8006:8000"
+    
