--- a/basic/php/symfony/docker/php/nginx/default.conf
+++ b/basic/php/symfony/docker/php/nginx/default.conf
@@ -1,8 +1,8 @@
 server {
     listen 80;
     index index.php;
-    error_log /var/www/var/log/error.log;
-    access_log /var/www/var/log/access.log;
+    error_log /var/www/data/logs/error.log;
+    access_log /var/www/data/logs/access.log;
     root /var/www/public;
 
     location / {
