--- a/basic/php/symfony/.env.test
+++ b/basic/php/symfony/.env.test
@@ -6,3 +6,4 @@ PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 CORS_ALLOW_ORIGIN=*
 DATABASE_URL=''
+CORS_ALLOW_ORIGIN='*'
